--- a/web/WEB-INF/resources/css/stile.css
+++ b/web/WEB-INF/resources/css/stile.css
@@ -15,7 +15,7 @@
 html { height: 100%;
        overflow-y: scroll;}
 body {
-    margin:0; padding:0;
+    margin:10px; padding:0;
     font-family:Verdana,sans-serif;
     font-size:small;
     //background:yellow;
@@ -25,7 +25,7 @@ body {
     //background-image: url(../immagini/aaa.jpg);
 }
 
-html, body, .col-md-12 , article, .container-fluid { height: 100% }
+
 
 header{
     background-color: darkslategray;
@@ -71,6 +71,9 @@ li.social a {
 .margin-20-top{
     margin-top: 20px;
 }
+.margin-40-top{
+    margin-top: 40px;
+}
 .margin-15-top{
     margin-top: 15px;
 }
@@ -81,8 +84,52 @@ li.social a {
     margin-top: 6px;
 }
 
-.map_google {
-    width:100%;
-    height:100%;
+.margin-20-left{
+    margin-left: 20px;
+}
+.margin-15-left{
+    margin-left: 15px;
+}
+.margin-10-left{
+    margin-left: 10px;
+}
+.margin-6-left{
+    margin-left: 6px;
 }
 
+.margin-20-right{
+    margin-right: 20px;
+}
+.margin-15-right{
+    margin-right: 15px;
+}
+.margin-10-right{
+    margin-right: 10px;
+}
+.margin-6-right{
+    margin-right: 6px;
+}
+
+.padding-left-10{
+    padding-left: 10px;
+}
+
+.padding-left-15{
+    padding-left: 15px;
+}
+
+.padding-left-20{
+    padding-left: 20px;
+}
+
+.padding-right-10{
+    padding-left: 10px;
+}
+
+.padding-right-15{
+    padding-left: 15px;
+}
+
+.padding-right-20{
+    padding-left: 20px;
+}
